Sat Mar 30 22:56:48 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (SRCS): Took the list of sources and object files in
		FSRCS, FOBJS, D3OBJS, and D3SRCS, and inlined them into
		the OBJS and SRCS list.  This is necessary so that the
		files are correctly picked up for the Macintosh build.

Thu Mar 28 10:49:31 1996  Richard Basch  <basch@lehman.com>

	* init_rkey.c, d3_str2ky.c, d3_procky.c: Support ENCTYPE_DES3_CBC_RAW

	* des_int.h: Support CKSUMTYPE_DES3_CBC_MD5

Wed Mar 20 22:33:40 1996  Theodore Y. Ts'o  <tytso@dcl>

	* u_nfold.c (mit_des_n_fold): 
	* d3_str2ky.c (mit_des3_string_to_key): Fix Windows lint flames.

Mon Mar 11 11:03:23 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* new_rn_key.c (mit_des_generate_random_block): Add const keywrod
		to cast for suncc warning.

Thu Feb 22 20:32:08 1996  Theodore Y. Ts'o  <tytso@dcl>

	* t_random.c: New file which just tests the random number generator.

	* new_rn_key.c (mit_des_set_random_generator_seed): Add fix so
		that we do something even if the input key is not a valid
		DES key.

Wed Jan 10 22:28:23 1996  Theodore Y. Ts'o  <tytso@dcl>

	* des_int.h: Fix return type for mit_des3_string_to_key().

Tue Nov 28 11:24:26 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* f_ecb.c, des_int.h (mit_des_ecb_encrypt): Add const declaration
		to input cblock.

Thu Nov 09 17:05:57 1995  Chris Provenzano (proven@mit.edu)

        * string2key.c : Remove krb5_enctype from krb5_string_to_key() args.
	* string2key.c, des_int.h : Remove krb5_enctype from 
		mit_des_string_to_key() args.

Tue Oct 31 22:06:52 1995  Theodore Y. Ts'o  <tytso@dcl>

	* finish_key.c (mit_des_finish_key): Make mit_des_finish_key()
		safe to call even if there is no key that needs to be
		freed.

Fri Oct  6 21:59:55 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Thu Sep 28 16:00:00 1995  John Rivlin  <jrivlin@fusion.com>
